--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
     "gulp-file-include": "^0.13.7",
-    "gulp-jade": "^1.1.0",
+    "gulp-pug": "^2.0.0",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "merge-stream": "^1.0.0",
+    "pug": "^0.1.0",
     "run-sequence": "^1.1.5"
   },
   "devDependencies": {
